# terminal_markdown_viewer

./: .gitattributes  .gitignore  .travis.yml  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  mdv.py  pypi_reminder.txt  pyproject.toml  pypy_reminder.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
example_config/: .mdv  .mdv.py
licenses/: markdown  pygments  tabulate
mdv/: __init__.py  ansi_tables.json  markdownviewer.py  mdv_new_alt.py  tabulate.py  theme_browser.sh
mdv/5color/: 1000.9554.json  1002.7419.json  1003.6382.json  1014.7138.json  1016.9868.json  1023.9096.json  1025.5556.json  1027.0309.json  1035.3948.json  1035.5653.json  1037.9023.json  1051.6923.json  1054.6854.json  1057.4342.json  1071.9241.json  1095.7712.json  1101.9593.json  302.163.json  336.4787.json  338.9263.json  423.967.json  456.4137.json  459.137.json  466.3302.json  469.8089.json  476.2008.json  482.7184.json  484.8694.json  505.3435.json  519.305.json  521.6724.json  523.565.json  525.5063.json  526.9416.json  528.9419.json  536.1444.json  536.216.json  537.8383.json  540.8706.json  541.0981.json  (+177 more)
mdv/b16/: 3024.json  apathy.json  apprentice.json  ashes.json  atelier-cave-light.json  atelier-cave.json  atelier-dune-light.json  atelier-dune.json  atelier-estuary-light.json  atelier-estuary.json  atelier-forest-light.json  atelier-forest.json  atelier-heath-light.json  atelier-heath.json  atelier-lakeside-light.json  atelier-lakeside.json  atelier-plateau-light.json  atelier-plateau.json  atelier-savanna-light.json  atelier-savanna.json  atelier-seaside-light.json  atelier-seaside.json  atelier-sulphurpool-light.json  atelier-sulphurpool.json  atlas.json  bespin.json  black-metal-bathory.json  black-metal-burzum.json  black-metal-dark-funeral.json  black-metal-gorgoroth.json  black-metal-immortal.json  black-metal-khold.json  black-metal-marduk.json  black-metal-mayhem.json  black-metal-nile.json  black-metal-venom.json  black-metal.json  brewer.json  bright.json  brogrammer.json  (+142 more)
mdv/misc/: .test_md.md.swp  convert_ansi_json_to_5color.py  perfest.py  test_md.md
mdv/tests/: test_files.py  test_inline.py
mdv/tests/files/: run  (+3 more)
tests/: README.md  README.md.expected  isssue_10.md  lists.md  lists_with_inline.md  main_example.md  nested_lists.md  ol.md  run  run_all.py  test1.md  test_files.py  test_inline.py  wrap1.md
tests/files/: blockquotes.md  issue_52.md  links.md  run  test_fenced.md
tests/manual/: lists_simple.md  lists_with_inline.md
(+45 files in other folders)
