[metadata]
name = mdv
version = 1.7.4
author = Axiros GmbH
author_email = gk@axiros.com
description = Terminal Markdown Viewer
keywords =
    markdown
    markup
    terminal
    hilighting
    syntax
    source code
url = http://github.com/axiros/terminal_markdown_viewer
download_url = http://github.com/axiros/terminal_markdown_viewer/tarball/
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    Natural Language :: English
    Operating System :: POSIX
    Topic :: Text Processing :: Markup
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires = pygments; markdown
include_package_data = True
tests_require = pytest

[options.packages.find]
include = mdv, mdv.*

[options.entry_points]
console_scripts = mdv = mdv:run

[options.extras_require]
yaml = pyyaml

[report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
